<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView android:id="@+id/answer_title"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="14dp"
  		android:layout_alignParentLeft="true"
  		android:paddingLeft="20dp"
  		android:text="@string/answer_title"></TextView>
  	<TextView android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="14dp"
  		android:layout_alignParentRight="true"
  		android:layout_toLeftOf="@id/answer_title"
  		android:layout_alignBottom="@id/answer_title"
  		android:paddingRight="50dp"
  		android:text="@string/direct_to_question_no"></TextView>
  </RelativeLayout>
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<ImageButton android:id="@+id/delete_answer_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:scaleType="fitXY"
  		android:layout_alignParentRight="true"
  		android:layout_centerVertical="true"
  		android:src="@drawable/del_task_button"
  		android:background="@android:color/transparent"></ImageButton>
  	<EditText android:id="@+id/answer_to_question_edit"
  		android:layout_width="40dp"
  		android:layout_height="wrap_content"
  		android:textSize="16dp"
  		android:layout_centerVertical="true"
  		android:text="@string/to_question_no_instruction"
  		android:layout_toLeftOf="@id/delete_answer_button"
  		android:selectAllOnFocus="true"
  		android:numeric="integer"
  		android:inputType="number"></EditText>
  	<EditText android:id="@+id/answer_title_edit"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="18dp"
  		android:layout_centerVertical="true"
  		android:layout_alignParentLeft="true"
  		android:layout_toLeftOf="@id/answer_to_question_edit"
  		android:selectAllOnFocus="true"></EditText>
  </RelativeLayout>
  
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<Button android:id="@+id/save_answer_change_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentRight="true"
  		android:text="@string/button_save_pwd_change"
  		android:focusable="true"><requestFocus /> </Button>
  	<Button android:id="@+id/cancel_answer_change_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_toLeftOf="@id/save_answer_change_button"
  		android:layout_alignBottom="@id/save_answer_change_button"
  		android:text="@string/cancel"></Button>
  </RelativeLayout>
</LinearLayout>
