<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView android:id="@+id/empty_question_warning"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="16dp"
  		android:layout_alignParentRight="true"
  		android:paddingRight="10dp"></TextView>
  	<TextView android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="16dp"
  		android:text="@string/rename_question_title"
  		android:layout_toLeftOf="@id/empty_question_warning"
  		android:layout_alignParentLeft="true"></TextView>
  </RelativeLayout>
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<ImageButton android:id="@+id/delete_question_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:scaleType="fitXY"
  		android:contentDescription="@string/content_description_for_delete_image_btn"
  		android:layout_alignParentRight="true"
  		android:layout_centerVertical="true"
  		android:src="@drawable/del_task_button"
  		android:background="@android:color/transparent"></ImageButton>
  	<EditText android:id="@+id/question_title_edit"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="18dp"
  		android:inputType="text"
  		android:layout_centerVertical="true"
  		android:layout_alignParentLeft="true"
  		android:layout_toLeftOf="@id/delete_question_button"
  		android:selectAllOnFocus="true"></EditText>
  </RelativeLayout>
  <TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="16dp"
  		android:text="@string/add_answers"></TextView>
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView android:id="@+id/answer_title_text"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="14dp"
  		android:layout_alignParentLeft="true"
  		android:paddingLeft="20dp"
  		android:text="@string/answer_title"></TextView>
  	<TextView android:id="@+id/direct_to_warning"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="14dp"
  		android:layout_alignParentRight="true"
  		android:layout_toLeftOf="@id/answer_title_text"
  		android:layout_alignBottom="@id/answer_title_text"
  		android:paddingRight="20dp"
  		android:text="@string/direct_to_question_no"></TextView>
  </RelativeLayout>
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<ImageButton android:id="@+id/add_answer_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentRight="true"
  		android:contentDescription="@string/content_description_for_delete_image_btn"
  		android:layout_centerVertical="true"
  		android:scaleType="fitXY"
  		android:src="@drawable/add_task_button"
  		android:background="@android:color/transparent"></ImageButton>
  	<EditText android:id="@+id/answer_to_question_no_edit"
  		android:layout_width="40dp"
  		android:layout_height="wrap_content"
  		android:textSize="16dp"
  		android:layout_centerVertical="true"
  		android:layout_toLeftOf="@id/add_answer_button"
  		android:selectAllOnFocus="true"
  		android:inputType="number"></EditText>
  	<EditText android:id="@+id/answer_title_edit"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:textSize="18dp"
  		android:inputType="text"
  		android:layout_alignParentLeft="true"
  		android:layout_centerVertical="true"
  		android:text="@string/add_answer_instruction"
  		android:layout_toLeftOf="@id/answer_to_question_no_edit"
  		android:selectAllOnFocus="true"></EditText>
  </RelativeLayout>
  <TextView android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:textSize="16dp"
  		android:text="@string/answer_title"></TextView>
  <ListView android:id="@+id/answer_list"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:paddingTop="10dp"
    	android:paddingLeft="30dp"
    	android:layout_weight="1"
    	android:background="@android:color/white"
    	android:cacheColorHint="@android:color/white">
  </ListView>
  <RelativeLayout android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<Button android:id="@+id/save_question_change_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentRight="true"
  		android:text="@string/button_save_pwd_change"
  		android:focusable="true"><requestFocus /> </Button>
  	<Button android:id="@+id/cancel_question_change_button"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_toLeftOf="@id/save_question_change_button"
  		android:layout_alignBottom="@id/save_question_change_button"
  		android:text="@string/cancel"></Button>
  </RelativeLayout>
  
</LinearLayout>
